--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 						const clips = root.animations;
 						mixer = new THREE.AnimationMixer( root );
-						console.log(clips);
+						//console.log(clips);
 
 
 						scene_action = mixer.clipAction(clips[0]);
@@ -501,7 +501,7 @@
 				{
 					isTime = true;
 					tempTime = time;
-					console.log("start", time, " ", timer_delta);
+					//console.log("start", time, " ", timer_delta);
 				}
 
 				if (isTime)
@@ -705,7 +705,7 @@
 							element.object.name == "InjectorPlunger")
 							&&stepindeex=='1')
 							{
-								console.log("injector");
+								//console.log("injector");
 								stepindeex = 3;
 								mooveSelectedObjAction(ingectionSyringeModel);
 								return;
@@ -715,7 +715,7 @@
 							element.object.name == "NeedleCap")
 							&&stepindeex=='1')
 							{
-								console.log("needle1");
+								//console.log("needle1");
 								stepindeex = 4;
 								mooveSelectedObjAction(needle1Model);
 								return;
@@ -724,7 +724,7 @@
 							element.object.name == "NeedleCase2Glass")
 							&&stepindeex=='1')
 							{
-								console.log("needle2");
+								//console.log("needle2");
 								stepindeex = 5;
 								mooveSelectedObjAction(needle2Model);
 								return;
@@ -740,9 +740,9 @@
 				document.getElementById("backButton").style.display = "none";
 
 				refractor.visible = true;
-				console.log(obj.rotation);
+				//console.log(obj.rotation);
 				var target = (stepindeex=='5')?(new THREE.Vector3(0, 0, -0.1)):(new THREE.Vector3(0, 0.05, 0));
-				console.log(obj.position);
+				//console.log(obj.position);
 				basePos = new THREE.Vector3();
 				basePos.x = obj.position.x;
 				basePos.y = obj.position.y;
@@ -756,10 +756,10 @@
 					duration: 2000, 
 					easing : TWEEN.Easing.Quadratic.InOut,
 					update: function(d) {
-						console.log("Updating: " + d);
+						//console.log("Updating: " + d);
 					},
 					callback : function(){
-						console.log("Completed");
+						//console.log("Completed");
 						document.getElementById("backButton").style.display = "block";
 						//transformControls.attach(selectedObject);
 						//transformControls.enabled = true;
@@ -769,7 +769,7 @@
 				});
 			}
 			function animateVector3(vectorToAnimate, target, options){
-				console.log(vectorToAnimate, " to ", target);
+				//console.log(vectorToAnimate, " to ", target);
 				options = options || {};
 				// get targets from options or set to defaults
 				var to = target || THREE.Vector3(),
@@ -845,7 +845,7 @@
 			var el = document.getElementById("canvas");
 			container.addEventListener("touchstart", function(e) {
 				//isMouseDown = true;
-				console.log("start touch")
+				//console.log("start touch")
 				my_touch.start_position.x = e.touches[0].pageX;
 				my_touch.start_position.y = e.touches[0].pageY;
 			}, false);
@@ -860,7 +860,7 @@
 				{
 					my_touch.position.x = e.touches[0].pageX;
 					my_touch.position.y = e.touches[0].pageY;
-					console.log(my_touch.start_position," ",my_touch.position);
+					//console.log(my_touch.start_position," ",my_touch.position);
 					moove_mobile(my_touch);
 					//handleMove(e);
 				}
@@ -890,20 +890,20 @@
 					var idx = ongoingTouchIndexById(touches[i].identifier);
 
 					if (idx >= 0) {
-					console.log("continuing touch "+idx);
+					//console.log("continuing touch "+idx);
 					ctx.beginPath();
-					console.log("ctx.moveTo(" + ongoingTouches[idx].pageX + ", " + ongoingTouches[idx].pageY + ");");
+					//console.log("ctx.moveTo(" + ongoingTouches[idx].pageX + ", " + ongoingTouches[idx].pageY + ");");
 					ctx.moveTo(ongoingTouches[idx].pageX, ongoingTouches[idx].pageY);
-					console.log("ctx.lineTo(" + touches[i].pageX + ", " + touches[i].pageY + ");");
+					//console.log("ctx.lineTo(" + touches[i].pageX + ", " + touches[i].pageY + ");");
 					ctx.lineTo(touches[i].pageX, touches[i].pageY);
 					ctx.lineWidth = 4;
 					ctx.strokeStyle = color;
 					ctx.stroke();
 
 					ongoingTouches.splice(idx, 1, copyTouch(touches[i]));  // swap in the new touch record
-					console.log(".");
+					//console.log(".");
 					} else {
-					console.log("can't figure out which touch to continue");
+					//console.log("can't figure out which touch to continue");
 					}
 				}
 				}
