--- a/index.html
+++ b/index.html
@@ -870,16 +870,16 @@
 				// get targets from options or set to defaults
 				var to = target || THREE.Vector3(),
 					easing = options.easing || TWEEN.Easing.Quadratic.In,
-					duration = options.duration || 2000;
+					duration = /*options.duration ||*/ 2000;
 				// create the tween
 				var tweenVector3 = new TWEEN.Tween(vectorToAnimate)
 					.to({ x: to.x, y: to.y, z: to.z, }, duration)
-					.easing(easing)
+					/*.easing(easing)
 					.onUpdate(function(d) {
 						if(options.update){ 
 							options.update(d);
 						}
-					})
+					})*/
 					.onComplete(function(){
 					if(options.callback) options.callback();
 					});
